--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -4,11 +4,11 @@ RUN apt-get update && \
     apt-get install -y curl gettext-base && \
     rm -rf /var/lib/apt/lists/*
 
-COPY ./grafana/entrypoint.sh .
-RUN chmod +x ./grafana/entrypoint.sh
+COPY ./grafana/entrypoint.sh ./grafana/.
+RUN chmod +x grafana
 
 # Todo: Just for debugging purposes, can be removed
 # Make sure that the init flag is not there
 RUN rm -rf /var/lib/grafana/.init
 
-ENTRYPOINT ["./grafana/entrypoint.sh"]
+#ENTRYPOINT ["./entrypoint.sh"]
